--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,11 @@ packages = [{include = "geo_k_means"}]
 
 [tool.poetry.dependencies]
 python = "^3.11"
+pytest = "^7.4.0"
+pytest-cov = "^4.1.0"
+blue = "^0.9.1"
+isort = "^5.12.0"
+taskipy = "^1.12.0"
 
 
 [build-system]
