--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,3 +18,18 @@ taskipy = "^1.12.0"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+
+[tool.pytest.ini_options]
+pythopath = "."
+addopts = "--doctest-modules"
+
+[tool.isort]
+profile = "black"
+line_length = 79
+
+[tool.taskipy.tasks]
+lint = "blue --check --diff . && isort --check --diff ."
+pre_test = "task lint"
+test = "pytest -s -x --cov=geo_k_means -vv"
+post_test = "coverage html"
