--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ pytest-cov = "^4.1.0"
 blue = "^0.9.1"
 isort = "^5.12.0"
 taskipy = "^1.12.0"
+numpy = "^1.25.2"
+matplotlib = "^3.7.2"
 
 
 [build-system]
