--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,15 +7,18 @@ readme = "README.md"
 packages = [{include = "geo_k_means"}]
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = ">=3.11,<3.13"
 pytest = "^7.4.0"
 pytest-cov = "^4.1.0"
 blue = "^0.9.1"
 isort = "^5.12.0"
 taskipy = "^1.12.0"
-numpy = "^1.25.2"
 matplotlib = "^3.7.2"
 scikit-learn = "^1.3.0"
+openml = "^0.14.1"
+numpy = "^1.26.0"
+scipy = "^1.9.0"
+pandas = "^2.1.2"
 
 
 [build-system]
