--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.pytest.ini_options]
 pythopath = "."
-addopts = "--doctest-modules"
+addopts = "-p no:warnings --doctest-modules"
 
 [tool.isort]
 profile = "black"
